# hector_move_base_navigation

./: README  stack.xml
argo_path_annotator/: CMakeLists.txt  package.xml  setup.py
argo_path_annotator/launch/: path_annotator.launch
argo_path_annotator/src/argo_path_annotator/: argo_path_annotator.py
footprint_publisher/: CMakeLists.txt  footprint_publisher.py  package.xml
hector_exploration_planner_test/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_exploration_planner_test/launch/: exploration_planner_test_setup.launch
hector_exploration_planner_test/maps/: RCGO2011_Hector_Mission5_2.pgm  RCGO2011_Hector_Mission5_2.yaml
hector_exploration_planner_test/rviz/: test_exploration.rviz
hector_exploration_planner_test/src/: exploration_planner_test_node.cpp  pose_with_cov_to_tf_node.cpp
hector_move_base/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_move_base/include/hector_move_base/: goal_id_container.h  handler_hector_action_goal.hpp  handler_hector_exploration.hpp  handler_hector_flipper_action.hpp  handler_hector_idle.hpp  handler_hector_planning.hpp  handler_hector_publish_abort.hpp  handler_hector_publish_feedback.hpp  handler_hector_publish_path.hpp  handler_hector_publish_preempted.hpp  handler_hector_publish_rejected.hpp  handler_hector_publish_success.hpp  handler_hector_refine_plan.hpp  handler_hector_stairs_driving.hpp  handler_hector_stuck_recovery.hpp  handler_hector_wait_for_reexploring.hpp  handler_hector_wait_for_replanning.hpp  hector_move_base.h  hector_move_base_state_machine.h  hector_tracked_stuck_recovery.h
hector_move_base/launch/: hector_move_base.launch  hector_move_base_bertl.launch
hector_move_base/mprim/: argo_no_turns_from_hector_v2.mprim  argo_no_turns_from_v1.mprim  argo_sbpl_fwd_rev_curve.m  argo_sbpl_no_turns_v2.m  argo_sbpl_only_turn_fwd_rev.m  backWeighted10.mprim  bla.mprim  calcendpoints.m  crab.mprim  crab_higher_cost.mprim  crab_higher_cost_only_back.mprim  genmprim_unicycleplussideways.m  hector_sbpl_mprim_generator.m  hector_sbpl_mprim_generator_longturns.m  mprim_generator_longturns_crab.m  test.mprim  test.out  test_long_turns.mprim  unicycle.mprim  unicycle_turn_front_back.mprim
hector_move_base/params/: .global_costmap_params.yaml.kate-swp  global_costmap_params.yaml  global_costmap_params_bertl.yaml  hector_global_planner_params.yaml  hector_local_planner_params.yaml  hector_move_base_params.yaml  move_base_params.yaml
hector_move_base/src/: hector_move_base.cpp  hector_move_base_state_machine.cpp
hector_move_base_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_move_base_msgs/include/hector_move_base_msgs/: move_base_action.h
hector_move_base_msgs/msg/: MoveBaseAction.msg  MoveBaseActionExplore.msg  MoveBaseActionFeedback.msg  MoveBaseActionGeneric.msg  MoveBaseActionGoal.msg  MoveBaseActionPath.msg  MoveBaseActionResult.msg  MoveBaseExplore.msg  MoveBaseGoal.msg  MoveBasePath.msg  MoveBaseResult.msg
hector_move_base_msgs/msg_gen/lisp/: MoveBaseAction.lisp  MoveBaseActionExplore.lisp  MoveBaseActionFeedback.lisp  MoveBaseActionGeneric.lisp  MoveBaseActionGoal.lisp  MoveBaseActionPath.lisp  MoveBaseActionResult.lisp  MoveBaseExplore.lisp  MoveBaseFeedback.lisp  MoveBaseGoal.lisp  MoveBasePath.lisp  MoveBaseResult.lisp  _package.lisp  _package_MoveBaseAction.lisp  _package_MoveBaseActionFeedback.lisp  _package_MoveBaseActionGeneric.lisp  _package_MoveBaseActionGoal.lisp  _package_MoveBaseActionResult.lisp  _package_MoveBaseExplore.lisp  _package_MoveBaseFeedback.lisp  _package_MoveBaseGoal.lisp  _package_MoveBasePath.lisp  hector_move_base_msgs-msg.asd
hector_move_base_msgs/src/: move_base_action_test.cpp
hector_nav_core/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_nav_core/include/hector_nav_core/: exploration_planner.h  hector_move_base_handler.h  hector_move_base_interface.h
hector_nav_core_exploration_plugin/: CMakeLists.txt  hector_nav_core_exploration_plugin.xml  mainpage.dox  manifest.xml  package.xml
hector_nav_core_exploration_plugin/include/hector_nav_core_exploration_plugin/: exploration_planner_loader.h  hector_nav_core_exploration_plugin.h
hector_nav_core_exploration_plugin/src/: hector_nav_core_exploration_plugin.cpp
hector_nav_msgs_tools/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_nav_msgs_tools/include/hector_nav_msgs_tools/: hector_nav_msgs_tools.h
hector_nav_msgs_tools_testing/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_nav_msgs_tools_testing/src/: main.cpp
hector_wall_planner/: CMakeLists.txt  hector_wall_planner_plugin.xml  mainpage.dox  manifest.xml  package.xml
hector_wall_planner/launch/: costmap_common_params.yaml  demo_2dnav_slam_wall.launch  erratic_2dnav_slam_wall.launch  hector_erratic_laser_mobile_base.launch  hector_erratic_laser_wg_world.launch  move_base_params_wall.yaml  move_base_slam_wall.launch
hector_wall_planner/src/: hector_wall_planner.cpp  hector_wall_planner.h
hector_wall_planner/urdf/: hector_erratic.urdf.xacro
inverse_trajectory_recovery/: CMakeLists.txt  inverse_trajectory_recovery_plugin.xml  mainpage.dox  manifest.xml  package.xml
inverse_trajectory_recovery/include/inverse_trajectory_recovery/: inverse_trajectory_recovery.h
inverse_trajectory_recovery/src/: inverse_trajectory_recovery.cpp
monstertruck_msgs/: CMakeLists.txt  mainpage.dox  package.xml
monstertruck_msgs/msg/: Compass.msg  Gps.msg  MotionCommand.msg  NavigationSolution.msg  Pdout.msg  PositionFeedback.msg  RawImu.msg  RawOdometry.msg  ServoCommand.msg  ServoCommands.msg  ServoPosition.msg  ServoPositions.msg  Status.msg
monstertruck_msgs/msg_gen/lisp/: Compass.lisp  Gps.lisp  MotionCommand.lisp  NavigationSolution.lisp  PositionFeedback.lisp  RawImu.lisp  RawOdometry.lisp  ServoCommand.lisp  ServoCommands.lisp  ServoPosition.lisp  (+14 more)
monstertruck_msgs/srv/: GetGazeDirection.srv  LookAt.srv  SetAlternativeTolerance.srv
turn_recovery/: CMakeLists.txt  manifest.xml  package.xml  rotate_plugin.xml
turn_recovery/src/: turn_recovery.cpp
(+76 files in other folders)
