<package>
  <name>hector_exploration_planner_test</name>
  <version>0.1.0</version>
  <description>hector_exploration_planner_test</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_exploration_planner_test</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Stefan Kohlbrecher</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>hector_exploration_planner</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>hector_exploration_planner</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>hector_exploration_planner</test_depend> -->

</package>