<package>
  <name>hector_move_base</name>
  <version>0.1.0</version>
  <description>hector_move_base</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_move_base</url>
  <!-- <url type="bugtracker"></url> -->

<!--  <author>Florian Kunz</author>-->

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>monstertruck_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>hector_move_base_msgs</build_depend>
  <build_depend>hector_nav_core</build_depend>
  <build_depend>hector_nav_msgs_tools</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>hector_exploration_planner</build_depend>
  <build_depend>inverse_trajectory_recovery</build_depend>
  <build_depend>hector_nav_core_exploration_plugin</build_depend>
  <build_depend>sbpl_lattice_planner</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>monstertruck_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>hector_move_base_msgs</run_depend>
  <run_depend>hector_nav_core</run_depend>
  <run_depend>hector_nav_msgs_tools</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>hector_exploration_planner</run_depend>
  <run_depend>inverse_trajectory_recovery</run_depend>
  <run_depend>hector_nav_core_exploration_plugin</run_depend>
  <run_depend>sbpl_lattice_planner</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>monstertruck_msgs</test_depend> -->
  <!-- <test_depend>move_base_msgs</test_depend> -->
  <!-- <test_depend>nav_core</test_depend> -->
  <!-- <test_depend>hector_move_base_msgs</test_depend> -->
  <!-- <test_depend>hector_nav_core</test_depend> -->
  <!-- <test_depend>hector_nav_msgs_tools</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>hector_exploration_planner</test_depend> -->
  <!-- <test_depend>inverse_trajectory_recovery</test_depend> -->
  <!-- <test_depend>hector_nav_core_exploration_plugin</test_depend> -->
  <!-- <test_depend>sbpl_lattice_planner</test_depend> -->

</package>
