<package>
  <name>hector_nav_core</name>
  <version>0.1.0</version>
  <description>hector_nav_core</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_nav_core</url>
  <!-- <url type="bugtracker"></url> -->

<!--  <author>Florian Kunz</author>-->

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>hector_move_base_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>hector_move_base_msgs</run_depend>
  <run_depend>costmap_2d</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>move_base_msgs</test_depend> -->
  <!-- <test_depend>hector_move_base_msgs</test_depend> -->
  <!-- <test_depend>costmap_2d</test_depend> -->

<export>
    <cpp cflags="-I${prefix}/include"/>
</export>

</package>