<package>
  <name>hector_nav_core_exploration_plugin</name>
  <version>0.1.0</version>
  <description>hector_nav_core_exploration_plugin</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_nav_core_exploration_plugin</url>
  <!-- <url type="bugtracker"></url> -->

<!--  <author>kohlbrecher</author>-->

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>hector_nav_core</build_depend>
  <build_depend>hector_exploration_planner</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hector_nav_core</run_depend>
  <run_depend>hector_exploration_planner</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>hector_nav_core</test_depend> -->
  <!-- <test_depend>hector_exploration_planner</test_depend> -->

<export>
    <hector_nav_core plugin="${prefix}/hector_nav_core_exploration_plugin.xml"/>
</export>

</package>