<package>
  <name>hector_nav_msgs_tools</name>
  <version>0.1.0</version>
  <description>hector_nav_msgs_tools</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_nav_msgs_tools</url>
  <!-- <url type="bugtracker"></url> -->

<!--  <author>stefan</author>-->

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->

<export>
    <cpp cflags="`pkg-config --cflags eigen3` -I${prefix}/include"/>
</export>

</package>